--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -11,4 +11,5 @@
 <p/>
 {% endif %}
 <a href="{% url "bank_admin:download_refund_file" %}">{% trans "Download Refunds" %}</a>
+<a href="{% url "bank_admin:download_adi_file" %}">Download ADI File</a>
 {% endblock %}
