--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if messages %}
+<ul class="errors">
+	{% for message in messages %}
+	<li>{{ message }}</li>
+	{% endfor %}
+</ul>
+<p/>
+<a href="{% url "bank_admin:download_refund_file" %}">Download Refunds</a>
+{% endif %}
 {% endblock %}
