--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
 {% if messages %}
@@ -8,6 +9,6 @@
 	{% endfor %}
 </ul>
 <p/>
-<a href="{% url "bank_admin:download_refund_file" %}">Download Refunds</a>
+<a href="{% url "bank_admin:download_refund_file" %}">{% trans "Download Refunds" %}</a>
 {% endif %}
 {% endblock %}
