Only display refund dowload link if user has perm
The button to download the file containing transactions to be
refunded - and the account details of the refundees - will now
only display if the user is actually able to access those
details on the API.

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -10,12 +10,16 @@
 </ul>
 <p/>
 {% endif %}
+{% if perms.transaction.view_bank_details_transaction %}
 <a href="{% url "bank_admin:download_refund_file" %}">
 	{% trans "Download Refunds" %}
 </a>
+<br/>
+{% endif %}
 <a href="{% url "bank_admin:download_adi_payment_file" %}">
 	{% trans "Download ADI Payment Reconciliation File" %}
 </a>
+<br/>
 <a href="{% url "bank_admin:download_adi_refund_file" %}">
 	{% trans "Download ADI Refund Reconciliation File" %}
 </a>
