Add shared assets setup Assets are now being shared across all 3 frontend app and are coming from money-to-prisoners-common. This adds the setup needed to import assets/templates from that package.

--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head></head>
-<body>
-{% block content %}{% endblock %}
-</body>
-</html>
+{% extends 'mtp_base.html' %}
+{% load i18n %}
+
+{% block page_title %}{% trans "Bank Admin" %}{% endblock %}
+
+{% block proposition %}{% trans "Bank Admin" %}{% endblock %}
