--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 
-{% block page_title %}{% trans "Bank Admin" %}{% endblock %}
+{% block page_title %}{% trans "Bank admin" %}{% endblock %}
 
-{% block proposition %}{% trans "Bank Admin" %}{% endblock %}
+{% block proposition %}{% trans "Bank admin" %}{% endblock %}
