Add views to allow the download of bai2 bank statements

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -28,4 +28,11 @@
     </p>
   </section>
 
+  <section class="ContentBlock">
+    <h2>{% trans 'BAI2 Bank Statement' %}</h2>
+    <p>
+      <a href="{% url 'bank_admin:download_bank_statement' %}">{% trans 'Download file' %}</a>
+    </p>
+  </section>
+
 {% endblock %}
