--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -6,16 +6,15 @@
   <h1>{% trans 'Download files' %}</h1>
 
   {% if perms.transaction.view_bank_details_transaction %}
-    <section class="ContentBlock">
-      <h2>{% trans 'AccessPay file - refunds' %}</h2>
-      <p>
-        <a href="{% url 'bank_admin:download_refund_file' %}">
-          {% blocktrans %}Download latest file{% endblocktrans %}
-        </a>
-      </p>
-    </section>
-  {% endif %}
-
+  <section class="ContentBlock">
+    <h2>{% trans 'AccessPay file - refunds' %}</h2>
+    <p>
+      <a href="{% url 'bank_admin:download_refund_file' %}">
+        {% blocktrans %}Download latest file{% endblocktrans %}
+      </a>
+    </p>
+  </section>
+  {% else %}
   <section class="ContentBlock">
     <h2>{% trans 'ADI Journal - refunds' %}</h2>
     {% for day in preceding_days %}
@@ -48,5 +47,6 @@
     </p>
     {% endfor %}
   </section>
+  {% endif %}
 
 {% endblock %}
