--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -3,3 +3,15 @@
 $images-dir: '/static/images/';
 
 @import 'mtp';
+
+section {
+  width: 60%;
+}
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: .2em;
+}
