Add link and view logic to download previous refund file

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -13,6 +13,11 @@
         {% blocktrans %}Download latest file{% endblocktrans %}
       </a>
     </p>
+    <p>
+      <a href="{% url 'bank_admin:download_previous_refund_file' %}">
+        {% blocktrans %}Download previous file{% endblocktrans %}
+      </a>
+    </p>
   </section>
   {% else %}
   <section class="ContentBlock">
