Use the new message box partial in order to display a message when necessary [updates #110406604]

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -5,6 +5,8 @@
   {% get_preceding_weekdays 5 offset=1 as preceding_days %}
   <h1>{% trans 'Download files' %}</h1>
 
+  {% include "includes/message_box.html" %}
+
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
     <h3>{% trans 'AccessPay file – refunds' %}</h3>
