Add some inline help

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -7,6 +7,13 @@
 
   {% include "includes/message_box.html" %}
 
+  <div class="help-box help-box-popup help-box-hidden">
+    <h3><div></div>Help with downloads</h3>
+    <ul>
+      <li>The file will download automatically when you click 'Download file'. Check your downloads folder for it.</li>
+    </ul>
+  </div>
+
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
     <h3>{% trans 'AccessPay file – refunds' %}</h3>
