Add the script to run tasks

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -9,9 +9,11 @@
 
   <div class="help-box help-box-popup help-box-hidden">
     <h3><div></div>Help with downloads</h3>
-    <ul>
-      <li>The file will download automatically when you click 'Download file'. Check your downloads folder for it.</li>
-    </ul>
+    <div class="help-box-contents">
+      <ul>
+        <li>The file will download automatically when you click 'Download file'. Check your downloads folder for it.</li>
+      </ul>
+    </div>
   </div>
 
   {% if perms.transaction.view_bank_details_transaction %}
