--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -18,21 +18,20 @@
 
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
-    <h3>{% trans 'AccessPay file – refunds' %}</h3>
-    <ul>
-      <li>
-        <a href="{% url 'bank_admin:download_refund_file' %}">
-          {% blocktrans %}Download latest file{% endblocktrans %}
-        </a>
-      </li>
-      <li>
-        <a href="{% url 'bank_admin:download_previous_refund_file' %}">
-          {% blocktrans %}Download previous file{% endblocktrans %}
-        </a>
-      </li>
-    </ul>
-    <hr/>
+    <h3>{% trans 'Access Pay file – refunds' %}</h3>
+    <a href="{% url 'bank_admin:download_refund_file' %}">{% trans 'Download file for TODAY' %}</a>
+    <div class="help-box help-box-popup help-box-hidden">
+      <h3><div></div>Previous file</h3>
+      <div class="help-box-contents">
+        <ul>
+          <li><a href="{% url 'bank_admin:download_previous_refund_file' %}">
+            {% trans 'Download previous file{% endblocktrans' %}
+          </a></li>
+        </ul>
+      </div>
+    </div>
   </section>
+  <hr/>
   {% endif %}
 
   <section class="ContentBlock">
@@ -66,7 +65,7 @@
   </section>
 
   <section class="ContentBlock">
-    <h3>{% trans 'BAI2 Bank Statement' %}</h3>
+    <h3>{% trans 'Bank statement' %}</h3>
     <ul>
       {% for day in preceding_days %}
       <li>
