Add date to today's Access Pay download link

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -19,7 +19,10 @@
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
     <h3>{% trans 'Access Pay file – refunds' %}</h3>
-    <a href="{% url 'bank_admin:download_refund_file' %}">{% trans 'Download file for TODAY' %}</a>
+    <a href="{% url 'bank_admin:download_refund_file' %}">
+      {% now 'd/m/Y' as today %}
+      {% blocktrans with date=today %}Download file for {{ date }}{% endblocktrans %}
+    </a>
     <div class="help-box help-box-popup help-box-hidden">
       <h3><div></div>Previous file</h3>
       <div class="help-box-contents">
