Allow download of previous access pay file from the same link
The ability to download the previous file if no new transactions are
available is triggered only after an initial failure and display of
a warning message that the file has already been downloaded.

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -23,20 +23,13 @@
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
     <h3>{% trans 'Access Pay file – refunds' %}</h3>
-    <a href="{% url 'bank_admin:download_refund_file' %}">
+    {% if request.GET.redownload_refunds %}
+      <p>{% trans 'No new transactions available for refund' %}</p>
+    {% endif %}
+    <a href="{% url 'bank_admin:download_refund_file' %}{% if request.GET.redownload_refunds %}?redownload_refunds=true{% endif %}">
       {% now 'd/m/Y' as today %}
       {% blocktrans with date=today %}Download file for {{ date }}{% endblocktrans %}
     </a>
-    <div class="help-box help-box-popup help-box-hidden">
-      <h3><div></div>{% trans 'Previous file' %}</h3>
-      <div class="help-box-contents">
-        <ul>
-          <li><a href="{% url 'bank_admin:download_previous_refund_file' %}">
-            {% trans 'Download previous file' %}
-          </a></li>
-        </ul>
-      </div>
-    </div>
     <hr/>
   </section>
   {% endif %}
