Group refunds by date in download of accesspay files
This is to match the behaviour of the way the other files
are generated, and reduce use confusion concerning the previously
implemented dynamically ranged accesspay file.

This also switches the download of previous days' files from
querying by batch to querying by date. This means that we now
download all invalid transactions, regardless of current status
i.e. refunded as we all refund_pending.

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -23,19 +23,30 @@
   {% if perms.transaction.view_bank_details_transaction %}
   <section class="ContentBlock">
     <h3>{% trans 'Access Pay file – refunds' %}</h3>
-    {% if request.GET.redownload_refunds %}
-      <div class="important">
-        <div class="icon"></div>
-        <div class="message">
-          <p><strong>{% trans 'The Access Pay file has already been downloaded' %}</strong></p>
-          <p>You can still download it but check that refunds are not processed twice</p>
-        </div>
-      </div>
-    {% endif %}
-    <a href="{% url 'bank_admin:download_refund_file' %}{% if request.GET.redownload_refunds %}?redownload_refunds=true{% endif %}">
-      {% now 'd/m/Y' as today %}
-      {% blocktrans with date=today %}Download file for {{ date }}{% endblocktrans %}
+    {% url 'bank_admin:download_refund_file' as base_download_url %}
+    {% for day in preceding_days %}
+      {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
+
+      {% if forloop.first %}
+    <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
+      {{ download_label }}
     </a>
+
+    <div class="help-box help-box-popup help-box-hidden">
+      <h3><div></div>{% trans 'Previous AccessPay refund files' %}</h3>
+      <div class="help-box-contents">
+        <ul>
+      {% else %}
+          <li>
+            <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
+              {{ download_label }}
+            </a>
+          </li>
+      {% endif %}
+    {% endfor %}
+        </ul>
+      </div>
+    </div>
     <hr/>
   </section>
   {% endif %}
