--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -10,3 +10,9 @@
 {% block page_title %}{% trans "Bank Admin" %}{% endblock %}
 
 {% block proposition %}{% trans "Bank Admin" %}{% endblock %}
+
+{% block user_menu %}
+<span>
+  <a href="{% url 'password_change' %}">{% trans "Change password" %}</a>
+</span>
+{% endblock %}
