Add pseudo-links to enable tabbed navigation and remove old test

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="help-box help-box-popup help-box-hidden">
-        <h3><div></div>{% trans 'Previous AccessPay refund files' %}</h3>
+        <h3><div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a></h3>
         <div class="help-box-contents">
           <ul>
         {% else %}
@@ -55,7 +55,7 @@
       </div>
 
       <div class="help-box help-box-popup help-box-hidden">
-        <h3><div></div>{% trans 'Previous ADI Journals – refunds' %}</h3>
+        <h3><div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a></h3>
         <div class="help-box-contents">
           <ul>
         {% else %}
@@ -86,7 +86,7 @@
       </div>
 
       <div class="help-box help-box-popup help-box-hidden">
-        <h3><div></div>{% trans 'Previous ADI Journals – credits' %}</h3>
+        <h3><div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a></h3>
         <div class="help-box-contents">
           <ul>
         {% else %}
@@ -118,8 +118,8 @@
       </div>
 
       <div class="help-box help-box-popup help-box-hidden">
-        <h3><div></div>{% trans 'Previous bank statements' %}</h3>
-        <div class="help-box-contents">
+        <h3><div></div><a href="#">{% trans 'Previous bank statements' %}</a></h3>
+        <div class="help-box-contents" style="display:none">
           <ul>
         {% else %}
             <li>
